--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,12 @@
-
+server:
+  port: 8085 
+  
+spring:   
+  application:
+   name: CONFIG-SERVER
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/Rahu313/MIcroServicesConfig
+          clone-on-start: true
