--- a/application-prod.yml
+++ b/application-prod.yml
@@ -1,1 +1,13 @@
+server:
+  port: 8085 
+  
+spring:   
+  application:
+   name: CONFIG-Prod
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/Rahu313/MIcroServicesConfig
+          clone-on-start: true
 
