--- a/application-dev.yml
+++ b/application-dev.yml
@@ -10,3 +10,11 @@ spring:
         git:
           uri: https://github.com/Rahu313/MIcroServicesConfig
           clone-on-start: true
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
