--- a/application-prod.yml
+++ b/application-prod.yml
@@ -11,3 +11,11 @@ spring:
           uri: https://github.com/Rahu313/MIcroServicesConfig
           clone-on-start: true
 
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
