--- a/application-prod.yml
+++ b/application-prod.yml
@@ -16,6 +16,6 @@ eureka:
     prefer-ip-address: true
   client:
     fetch-registry: true
-    register-with-eureka: true
+    register-with-eureka: false
     service-url:
       defaultZone: http://localhost:8761/
