--- a/application-prod.yml
+++ b/application-prod.yml
@@ -18,4 +18,4 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/
+      defaultZone: http://localhost:8761/eureka
