--- a/application.yml
+++ b/application.yml
@@ -18,3 +18,6 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
+      eurekaConnectionIdleTimeoutInSeconds: 30
+      eurekaServerReadTimeoutSeconds: 30
+      eurekaServerConnectTimeoutSeconds: 30
