--- a/application.yml
+++ b/application.yml
@@ -17,7 +17,5 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
-      eurekaConnectionIdleTimeoutInSeconds: 60
-      eurekaServerReadTimeoutSeconds: 60
-      eurekaServerConnectTimeoutSeconds: 60
+      defaultZone: http://localhost:8761/eureka
+     
