--- a/application.yml
+++ b/application.yml
@@ -1,9 +1,10 @@
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/Rahu313/MIcroServicesConfig
-          clone-on-start: true
+
+  # cloud:
+  #   config:
+  #     server:
+  #       git:
+  #         uri: https://github.com/Rahu313/MIcroServicesConfig
+  #         clone-on-start: true
 eureka:
   instance:
     prefer-ip-address: true
